# chuffed

./: README
binary/mac/: fzn_chuffed
parallel/chuffed/core/: conflict.c  engine.c  engine.h  init.c  options.c  options.h  sat-types.h  sat.c  sat.h  stats.c
parallel/chuffed/flatzinc/: flatzinc.c  flatzinc.h  lexer.lxx  parser.tab.c  parser.tab.h  parser.yxx
parallel/chuffed/globals/: globals.h  regular.c
parallel/chuffed/mdd/: mdd_prop.c  opts.h
parallel/chuffed/mip/: mip.c  recalc.c
parallel/chuffed/parallel/: master.c  parallel.h  slave.c
parallel/chuffed/support/: sparse_set.h
parallel/chuffed/vars/: bool-view.h  int-var-el.h  int-var-ll.h  int-var.c  vars.h
trunk/: CMakeLists.txt
trunk/chuffed/: Makefile  README
trunk/chuffed/branching/: branching.c  branching.h
trunk/chuffed/core/: conflict.c  engine.c  engine.h  init.c  options.c  options.h  propagator.h  sat-types.h  sat.c  sat.h  stats.c
trunk/chuffed/examples/: bibd.c  blackhole.c  concert_hall.c  concert_hall_sym.c  cross.c  golomb.c  graceful_graph.c  graph_colouring.c  graph_colouring_sym.c  graph_colouring_sym2.c  grid_colouring.c  latin_square.c  magic_square.c  mosp.c  nn_queens.c  non.c  photo.c  queens.c  rcpsp.c  steel_mill.c  template.c
trunk/chuffed/flatzinc/: flatzinc.c  flatzinc.h  fzn_chuffed.c  lexer.lxx  lexer.yy.c  parser.yxx  registry.c
trunk/chuffed/globals/: alldiff.c  circuit.c  cumulative.c  cumulativeCalendar.c  directives.c  disjunctive.c  globals.h  lex.c  linear-bool.c  mddglobals.c  mddglobals.h  minimum.c  regular.c  sym-break.c  table.c  template.c  well-founded.c
trunk/chuffed/ldsb/: ldsb.c  ldsb.h
trunk/chuffed/mdd/: MDD.c  MDD.h  MurmurHash3.c  mdd_prop.c  mdd_prop.h  mdd_to_lgraph.c  weighted_dfa.c  weighted_dfa.h  wmdd_prop.h
trunk/chuffed/mip/: mip.c  mip.h  recalc.c  simplex.c  simplex.h
trunk/chuffed/parallel/: master.c  slave.c
trunk/chuffed/primitives/: arithmetic.c  binary.c  bool.c  element.c  linear.c  primitives.h
trunk/chuffed/support/: heap.h  misc.h
trunk/chuffed/vars/: bool-view.c  bool-view.h  int-var-el.c  int-var-el.h  int-var-ll.c  int-var-sl.c  int-var-sl.h  int-var.c  int-var.h  int-view.h  modelling.c  modelling.h  vars.h
